--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GROQ_API_KEY = "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"
+GEMINI_API_KEY = "AIzaSyAWx9pZRWzlShzqF7-CiEwEPf3TE6HqzMc"
 EVOLUTION_API_KEY = "38a98593-fcd0-481d-8729-043d70d4db8f"
-EVOLUTION_API_URL=http://localhost:8080
