--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GROQ_API_KEY = "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"
-GEMINI_API_KEY = "AIzaSyAWx9pZRWzlShzqF7-CiEwEPf3TE6HqzMc"
+GROQ_API_KEY = "YOUR_KEY"
+GEMINI_API_KEY = "YOUR_KEY"
