--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-GROQ_API_KEY = "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"
-EVOLUTION_API_KEY = "38a98593-fcd0-481d-8729-043d70d4db8f"
-EVOLUTION_API_URL=http://localhost:8080
+GROQ_API_KEY = "YOUR_KEY"
+EVOLUTION_API_KEY = "YOUR_KEY"
