--- a/secrets.toml
+++ b/secrets.toml
@@ -6,17 +6,17 @@
 
 [auth]
 # Credenciais principais
-username = "gxbriellops"
-password = "aeiou8734"
+username = "seu_usuario"
+password = "sua_senha"
 
 # Credenciais demo (opcional)
-demo_username = "gxbriellops"
-demo_password = "aeiou8734"
+demo_username = "seu_usuario_demo"
+demo_password = "sua_senha_demo"
 
 [api_keys]
 # Suas chaves de API
-GEMINI_API_KEY = "AIzaSyAWx9pZRWzlShzqF7-CiEwEPf3TE6HqzMc"
-GROQ_API_KEY = "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"
+GEMINI_API_KEY = "sua_api"
+GROQ_API_KEY = "sua_api"
 
 [database]
 # Para SQLite (padrão)
